plat-469 fix adding margin to the top to stop the jumping, Gustavo to the rescue

--- a/profiles/cr/themes/custom/campaign_base/sass/components/Navigation/_main-nav.scss
+++ b/profiles/cr/themes/custom/campaign_base/sass/components/Navigation/_main-nav.scss
@@ -133,6 +133,7 @@ nav.menu--main {
          background-color: $colour-black;
          width: 100% !important;
          // important is to override styling coming in from nav JS plugin
+         margin-top: 5px;
 
         a {
           background-color: #222;
